# co2-wellbore

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: assumptions.md  equations.md  opm_coupling.md
examples/: 01_basic_profile.py  02_required_thp.py  03_vfpinj_table.py  04_injectivity_control.py
legacy/: co2_wellbore_coolprop_manywells.py
src/co2_wellbore/: __init__.py  calculator.py  config.py  constants.py  correlations.py  diagnostics.py  drift_flux.py  opm.py  properties.py
tests/: test_calculator_smoke.py  test_config.py  test_correlations.py  test_rate_conversion.py  test_vfpinj.py
