[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "co2-wellbore"
version = "0.1.0"
description = "A transparent Python calculator for CO2 injection wellbore profiles, CCS/CCUS studies, CoolProp properties, and OPM Flow coupling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Vasilii Anisimov" }
]
dependencies = [
    "numpy",
    "pandas",
    "CoolProp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
